--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -1,12 +1,35 @@
-body{
-    background-color: pink;
-}
 
 main{
-    margin: auto;
+    color: var(--white);
+    height: 100vh;
+    display: flex;
+
+}
+
+header{
+    opacity: 0.5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    height: 60px;
+    background-color: rgb(0, 0, 0);
+
+    width: 100%;
+}
+
+header a{
+    margin-left: 20px   ;
+    vertical-align: middle;
+    color: var(--white);
+    text-decoration: none;
 }
 
 #blog-entry{
+    border-radius: 15px;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.719);
+    width: 500px;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -16,4 +39,16 @@ main{
 
 #blog-entry img{
     width: 200px;
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.798); /* Black with 50% opacity */
+    pointer-events: none; /* Allows clicks to pass through */
+    z-index: 0; /* Ensures it sits above the background image but below the content */
 }
