--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,43 @@
-.thumbnail-image {
-  object-fit: cover;
-  width: 100%; 
-  height: auto; 
+
+body{
+  margin: 16px
 }
 
-.nav-buttons, #sort-buttons{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  background-size: cover;
+.post{
+  height: 100%;
+  width: 100%;
+  object-fit:fill;
 }
+
+.thumbnail-image {
+  object-fit:cover;
+  height: 100%;
+  width: 100%;
+}
+
 
 /*############################# Carousel elements ####################################*/
+
+#right-post h2,
+#left-post h2 {
+  display: none;
+}
+
+#center-post h2{
+  position: absolute;
+  font-size: 0.8em;
+  background-color: rgba(0, 0, 0, 0.897);
+  color: var(--white);
+  bottom: 0px;
+  text-align: center;
+  width: 100%;
+  margin: 0px;
+  height: 30%;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .carousel-post {
   vertical-align: middle;
@@ -25,13 +51,16 @@
   flex: 0 0 30%;
   background-color: white;
   border-radius: 5px;
-  cursor: pointer;
+
   transition: transform 0.3s ease;
 }
 
+.carousel-post:hover .overlay {
+  background: rgba(0, 0, 0, 0.1); /* Add slight background color on hover */
+}
+
 .carousel-post:hover {
-  transform: scale(1.2);
-  box-shadow: 4px 4px 4px grey;
+  transform: scale(1.1);
 }
 
 #carousel-monty {
@@ -43,10 +72,19 @@
 
 #right-post:hover,
 #left-post:hover {
-  z-index: 10;
   transition-duration: 200ms;
   opacity: 100%;
 }
+
+
+#right-post:hover{
+  cursor: url(../assets/Vector-r.png) 5 5, auto;
+}
+
+#left-post:hover{
+  cursor: url(../assets/Vector-l.png) 5 5, auto;
+}
+
 
 .carousel-post .post {
   background-color: rgb(0, 0, 0);
@@ -62,13 +100,21 @@
   z-index: 10;
   position: relative;
   transform: scale(1.2);
+  
 }
 
 #center-post:hover {
-  transform: scale(1.4);
+  transform: scale(1.3);
+  cursor: url(../assets/Vector-c.png) 5 5, auto;
 }
 
 /*############################# Card containing image and post preview ####################################*/
+
+#grid-python{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 
 .post-tile {
   display: flex;
@@ -98,11 +144,10 @@
 #display-blog {
   color: white;
   background-color: rgb(94, 94, 94);
-  border-radius: 15px;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 #display-blog div {
@@ -131,12 +176,9 @@
 }
 
 #display-blog div:hover {
-  opacity: 0.7;
-  cursor: url(../assets/logo-2D-smaller.png) 5 5, auto;;
-}
-
-#display-blog div:hover {
   background: rgba(0, 0, 0, 0.562);
+  opacity: 0.7;
+  cursor: url(../assets/Vector-c.png) 5 5, auto;;
 }
 
 .text-content {
@@ -184,6 +226,144 @@
   object-position:center;
 }
 
+/*############################# Filtering and sorting ####################################*/
+
+
+.index-button{
+  height: 40px;
+  width: 160px;
+  background-color: var(--grey);
+  border: solid 1px var(--white);
+  border-radius: 5px;
+
+  color: var(--white);
+  font-family: "Lexend", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.nav-buttons button{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.nav-buttons, .sort-buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-size: cover;
+}
+
+
+.index-button:hover{
+  background-color: rgb(89, 89, 89);
+  border: solid 1px var(--white);
+  box-shadow: 2px 2px 2px black;
+}
+
+
+.index-button:disabled,
+button[disabled]{
+  background-color: #393939;
+  border-color: #7a7a7a;
+  color: #666666;
+}
+
+.index-button:disabled:hover{
+  box-shadow: none;
+}
+
+#sort-and-filter{
+  color: var(--white);
+  padding: 20px;
+  margin-top: 2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 16px;
+  background-color: rgba(0, 0, 0, 0.154);
+}
+
+#filter-buttons{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#sort-buttons{
+  text-align: center;
+}
+
+#sort-buttons > div{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap:8px
+}
+
+#filter-buttons > section{
+  display: flex;
+  gap: 8px;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+summary{
+  color: var(--white);
+}
+
+summary:hover{
+  color: var(--yellow);
+  cursor: pointer;
+}
+
+/*############################# Breakpoints ####################################*/
+
+.overlay {
+  position: absolute;
+  
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height:100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background 0.3s ease;
+  color: white; /* For debugging text */
+}
+
+.arrow-left {
+  left: 0;
+  background-image: url('/assets/leftbanner.png'); /* Replace with your left arrow image */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.arrow-right {
+  right: 0;
+  background-image: url('/assets/rightbanner.png'); /* Replace with your right arrow image */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.carousel-post {
+  position: relative;
+  height: 250px;
+  max-width: 400px;
+}
+
+
+/*Carousel extra*/
+
 @media screen and (max-width: 480px) {
   #carousel-monty{
     width: 100%;
@@ -202,5 +382,19 @@
 
   .text-content{
     width: 100%;
+  }
+
+  .index-button{
+    height: 30px;
+    width: 140px;
+    font-size: 0.8em;
+  }
+
+  .carousel-post {
+    height: 150px;
+  }
+
+  #center-post h2{
+    height: 50%;
   }
 }
