--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -1,21 +1,45 @@
 
 main{
     color: var(--white);
-    height: 100vh;
+    height: 100%;
     display: flex;
 
 }
 
 header{
+    z-index: 1000;
     opacity: 0.5;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     position: fixed;
     height: 60px;
     background-color: rgb(0, 0, 0);
-
     width: 100%;
+}
+
+header > div:first-child {
+    flex: 1;
+}
+header > div:last-child {
+    flex: 1;
+}
+
+#logo{
+margin: auto;
+    color: var(--white);
+    text-align: center;
+}
+
+#logo > p{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#logo > h1{
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 header a{
@@ -26,6 +50,7 @@ header a{
 }
 
 #blog-entry{
+
     border-radius: 15px;
     padding: 30px;
     background-color: rgba(0, 0, 0, 0.719);
@@ -33,6 +58,8 @@ header a{
     display: flex;
     flex-direction: column;
     margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
     text-align: center;
     align-items: center;
     
@@ -49,9 +76,9 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.798); /* Black with 50% opacity */
-    pointer-events: none; /* Allows clicks to pass through */
-    z-index: 0; /* Ensures it sits above the background image but below the content */
+    background: rgba(0, 0, 0, 0.798);
+    pointer-events: none; 
+    z-index: 0; 
 }
 
 
