--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,26 @@ body{
   height: 100%;
 }
 
+/* Scrollbar  */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--black);
+  box-shadow: inset 0 0 5px var(--grey);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--grey);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--yellow);
+}
+
 /*################################################################################
 ################################### Sections #################################*/
 
