Aria labels and ALT-cleanup
Fixed a lot of label info.
Removed several comments.
Rendered some scripts differently
Removed excess code

--- a/css/edit.css
+++ b/css/edit.css
@@ -26,4 +26,10 @@ header{
     background-color: burlywood;
     padding: 10px;
     margin-bottom: 20px;
+
 }
+
+header a{
+    text-decoration: none;
+}
+
